# rust-sandbox

./: README.md
arrays/src/: main.rs
branches/src/: main.rs
ch00-sandbox/: Cargo.toml
ch00-sandbox/src/: main.rs
ch02-guessing-game/src/: main.rs
ch03-exercises/: Cargo.toml
ch03-exercises/src/: main.rs
ch03-variables/src/: main.rs
ch06-enums-and-patterns/src/: main.rs
ch07-backyard-modules/: Cargo.toml
ch07-restaurant/: Cargo.toml
ch07-restaurant/src/: back_of_house.rs  lib.rs
ch08-exercises/: Cargo.toml
ch08-exercises/src/: main.rs
ch08-hash-map/: Cargo.toml
ch08-hash-map/src/: main.rs
ch08-vectors/: Cargo.toml
ch08-vectors/src/: main.rs
ch09-recoverable-errors/: Cargo.toml
ch09-recoverable-errors/src/: main.rs
ch10-generics/src/: main.rs
ch10-traits/: Cargo.toml
ch10-traits/src/: aggregator.rs  main.rs  trait_bounds.rs
ch11-adder/src/: lib.rs
ch11-tests/: Cargo.toml
ch11-tests/src/: lib.rs
ch11-tests/tests/: integration_test.rs
ch12-minigrep/: Cargo.toml
ch12-minigrep/src/: lib.rs  main.rs
ch13-closures/src/: main.rs
ch13-iterators/: Cargo.toml
ch13-iterators/src/: main.rs
ch14-pub-use/: Cargo.toml
ch14-pub-use/src/: lib.rs
ch14-workspace/adder/: Cargo.toml
ch15-box/src/: main.rs
ch15-deref/: Cargo.toml
ch15-deref/src/: main.rs
ch15-reference-counting/: Cargo.toml
ch15-reference-cycles/: Cargo.toml
ch16-channels/: Cargo.toml
ch16-threads/: Cargo.toml
ch17-oo-pattern/: Cargo.toml
ch17-trait-objects/: Cargo.toml
ch19-advanced-traits/: Cargo.toml
ch19-unsafe-rust/: Cargo.toml
(+22 files in other folders)
