[package]
name = "minigrep_marcinskic"
version = "0.1.0"
edition = "2021"
description = "very simple implementation of grep utility tool, made as an exercise from \"The Book\""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
